--- a/src/template.html
+++ b/src/template.html
@@ -99,13 +99,13 @@
                   <div class="col-1 icon">
                     <i class="far fa-clock fa-fw"></i>
                   </div>
-                  <div class="col-10 context">увеличенная длительность занятий для проведения разминки - 70 минут </div>
+                  <div class="col-10 context">увеличенная длительность занятий и индивидуальный темп развития </div>
                 </div>
                 <div class="row">
                   <div class="col-1 icon">
                     <i class="fas fa-ruble-sign fa-fw"></i>
                   </div>
-                  <div class="col-10 context">Абонементы по выгодной цене и скидки на первое занятие</div>
+                  <div class="col-10 context">абонементы по выгодной цене и скидки на первое занятие</div>
                 </div>
                 <div class="wrap_button">
                   <button type="button" class="btn btn-primary mt-2" data-toggle="modal" data-target="#form_modal">
@@ -160,7 +160,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h2>Приемущества индивидуального занятия
+            <h2>Преимущества индивидуального занятия
               <br /> перед групповым</h2>
           </div>
         </div>
@@ -173,7 +173,7 @@
               <div class="header">
                 <h4>Удобное время занятий</h4>
               </div>
-              <p>Не нужно подстраиваться под расписание занятий в группе. <br />Вы занимаетесь тогда когда вам это удобно</p>
+              <p>Не нужно подстраиваться под расписание занятий в группе. Вы занимаетесь тогда когда вам это удобно</p>
             </div>
           </div>
           <div class="item col-lg-3 col-sm-6">
@@ -234,12 +234,13 @@
                 <li>
                   <i class="fa-li fas fa-circle"></i>С первых занятий вы начнёте не просто делать базовые шаги, но понимать принципы построения движений,
                   я научу вас понимать простое и сложное взаимодействие, видеть рисунок танца, ощущать диалог в паре. Вы будете получать удовольствие и новые впечатления
-                  от того чему научились. Несмотря на большое многообразие стилей вы научитесь понимать партнёра любого из направлений
-                  Зука!
+                  от того чему научились. Вы научитесь понимать партнёра любого из направлений Зука!
                 </li>
                 <li>
-                  <i class="fa-li fas fa-circle"></i>Мы разберём по косточкам движения и связки характерные для зука: движения с головой (так называемые хэдворки), нестандартные
-                  вращения, техники ведения за плечи, различные волны и сложные крутые «верёвочки», управление кистями.</li>
+                  <i class="fa-li fas fa-circle"></i>Танцуя зук можно очень хорошо расслабиться, снять зажимы, и в то же время мягко 
+                  проработать такие мышцы спины, которые мы никогда не используем при нашем сидячем образе жизни.
+                  Мы разберём по косточкам движения и связки характерные для зука: движения с головой (так называемые хэдворки), нестандартные
+                  вращения, техники ведения за плечи, различные волны и сложные крутые «верёвочки», хэдворки, ведение за кисти.</li>
               </ul>
             </div>
           </div>
@@ -702,7 +703,7 @@
                       <i class="fas fa-ruble-sign"></i>
                     </span>
                   </div>
-                  <p class="card-text">При занятиях с парой <br> 2500 <i class="fas fa-ruble-sign fa-fw"></i> </p>
+                  <p class="card-text">Если вы занимаетесь с парой <br> 2500 <i class="fas fa-ruble-sign fa-fw"></i> </p>
                   <p class="card-text">Длительность занятия</p>
                   <p>70 минут</p>
                   <p class="card-text little">* Стоимость посещения залов студии Ивара оплачивается отдельно - 300<i class="fas fa-ruble-sign fa-fw"></i></p>
