Добавлены логотип и favicon, исправлены отступы

--- a/src/template.html
+++ b/src/template.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link rel="shortcut icon" href=<%=require( "./img/favicon/favicon.png")%> type="image/x-icon">
+  <link rel="shortcut icon" href=<%=require( "./img/favicon/aliandr-logo-favicon-blue.png")%> type="image/x-icon">
 
   <!-- Fonts Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
@@ -26,7 +26,8 @@
       <div class="row">
         <nav class="navbar col-12 navbar-expand-lg navbar-light">
           <a class="navbar-brand" href="#">
-            <img class="logo" src=<%=require( "./img/logo_mark_script_blue.png")%> alt=""></a>
+            <img class="logo logo-main" src=<%=require( "./img/main_logo_and_name.png")%> alt="">
+          </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="lines d-flex flex-column">
