--- a/src/template.html
+++ b/src/template.html
@@ -606,6 +606,24 @@
                   <div class="wrapper">
                     <div class="carousel-caption">
                       <p class="caption">
+                        Встав в пару с Андреем, кажется, что ты умеешь танцевать любой танец) 
+                        Но это обманчивые ощущения и на занятиях понимаешь, что предстоит ещё много работы.
+                        Дальше начинается оттачивание каждого элемента, Андрей терпеливо и внимательно следит за каждым движением. 
+                        Он умеет хорошо подать и объяснить материал. Изучая зук, ловишь кайф, неповторимые чувства и полет от танца.
+                        Всем рекомендую эту чудесную пару Алису и Андрея, они раскроют для Вас настоящий мир танца с многогранными эмоциями.
+                      </p>
+                      <img src=<%=require( "./img/testimonial-natalya-ivankina.jpg")%> alt="" class="face">
+                      <h3 class="name">Наталья Иванкина</h3>
+                      <small>
+                        <a href="https://vk.com/id611831" class="link-vk">https://vk.com/id611831</a>
+                      </small>
+                    </div>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="wrapper">
+                    <div class="carousel-caption">
+                      <p class="caption">
                         “Андрей - прекрасный преподаватель, занималась с ним индивидуально, узнала много нюансов, даже казалось бы, в простых движениях,
                         который позволили мне исполнять движения правильно и красиво. Добавила к базе, которую получала на
                         группах множество новых движений и знаний по хэдворку. Каждый раз на уроках получала что-то новое
@@ -647,6 +665,7 @@
                   <li data-target="#reviews_carousel" data-slide-to="5"></li>
                   <li data-target="#reviews_carousel" data-slide-to="6"></li>
                   <li data-target="#reviews_carousel" data-slide-to="7"></li>
+                  <li data-target="#reviews_carousel" data-slide-to="8"></li>
                 </ol>
                 <a class="carousel-control-prev d-none" href="#reviews_carousel" role="button" data-slide="prev">
                   <i class="fas fa-chevron-circle-left fa-2x"></i>
