--- a/src/template.html
+++ b/src/template.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link rel="shortcut icon" href=<%=require( "./img/favicon/aliandr-logo-favicon-blue.png")%> type="image/x-icon">
+  <link rel="shortcut icon" href=<%=require( "./img/favicon/blue-favicon.png")%> type="image/x-icon">
 
   <!-- Fonts Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
@@ -26,7 +26,7 @@
       <div class="row">
         <nav class="navbar col-12 navbar-expand-lg navbar-light">
           <a class="navbar-brand" href="#">
-            <img class="logo logo-main" src=<%=require( "./img/main_logo_and_name.png")%> alt="">
+            <img class="logo logo-main" src=<%=require( "./img/main_blue_logo.png")%> alt="">
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
@@ -174,7 +174,7 @@
               <div class="header">
                 <h4>Удобное время занятий</h4>
               </div>
-              <p>Не нужно подстраиваться под расписание занятий в группе. Вы занимаетесь тогда когда вам это удобно</p>
+              <p>Не нужно подстраиваться под расписание занятий в группе. <br />Вы занимаетесь тогда, <br /> когда вам это удобно</p>
             </div>
           </div>
           <div class="item col-lg-3 col-sm-6">
