Правки по тексту

--- a/src/template.html
+++ b/src/template.html
@@ -758,11 +758,11 @@
                   <span class="text-color">8</span> занятий</h5>
                 <div class="card-body">
                   <div class="price">
-                    <span class="cein">14000
+                    <span class="cein">15000
                       <i class="fas fa-ruble-sign"></i>
                     </span>
                   </div>
-                  <p class="card-text">Экономия 2 000
+                  <p class="card-text">Экономия 2 600
                     <i class="fas fa-ruble-sign"></i>
                   </p>
                   <p class="card-text">Длительность занятия</p>
@@ -786,7 +786,7 @@
                       <i class="fas fa-ruble-sign"></i>
                     </span>
                   </div>
-                  <p class="card-text">Экономия 5 000
+                  <p class="card-text">Экономия 8200
                     <i class="fas fa-ruble-sign"></i>
                   </p>
                   <p class="card-text">Длительность занятия</p>
