--- a/src/template.html
+++ b/src/template.html
@@ -34,7 +34,7 @@
   </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/62320615" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
-  <title>Зук школа танцев</title>
+  <title>Зук индивидуальные занятия</title>
 </head>
 
 <body>
@@ -786,7 +786,7 @@
                       <i class="fas fa-ruble-sign"></i>
                     </span>
                   </div>
-                  <p class="card-text">Экономия 8200
+                  <p class="card-text">Экономия 8 200
                     <i class="fas fa-ruble-sign"></i>
                   </p>
                   <p class="card-text">Длительность занятия</p>
