--- a/src/template.html
+++ b/src/template.html
@@ -63,6 +63,9 @@
                 <a class="nav-link" href="#masters">Преподаватели</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="#video">Видео</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="#reviews">Отзывы</a>
               </li>
               <li class="nav-item">
@@ -302,7 +305,7 @@
       </div>
     </section>
     <section id="video" class="py-4">
-      <div class="container">
+      <div class="container  pt-5">
         <div class="row  justify-content-center">
           <div class="col-12" hidden>
             <h2>Видео</h2>
