Добавил ссылку на канал YouTube

--- a/src/template.html
+++ b/src/template.html
@@ -306,7 +306,7 @@
     </section>
     <section id="video" class="py-4">
       <div class="container  pt-5">
-        <div class="row  justify-content-center">
+        <div class="row  justify-content-center mb-3">
           <div class="col-12" hidden>
             <h2>Видео</h2>
           </div>
@@ -321,8 +321,21 @@
                 allowfullscreen>
               </iframe>
             </div>
+          </div>                
+        </div>
+        <div class="row justify-content-center youtube">
+          <div class="col-6 text-center">
+            <p> 
+              <a 
+                class="btn btn-info btn-youtube" 
+                href="https://www.youtube.com/channel/UCpm2CYbet0fmGvNmUMaE8mg" 
+                role="button" target="_blank" 
+                style="background-color: #FF0000; border-color: #b81717; "
+              >
+                Подписывайтесь на наш канал в YouTube !
+              </a>
+            </p>
           </div>
-             
         </div>
       </div>
     </section>       
