Добавил абонементы для пар

--- a/src/template.html
+++ b/src/template.html
@@ -324,7 +324,7 @@
           </div>                
         </div>
         <div class="row justify-content-center youtube">
-          <div class="col-6 text-center">
+          <div class="col-12 col-xs-6 text-center">
             <p> 
               <a 
                 class="btn btn-info btn-youtube" 
@@ -756,7 +756,7 @@
                       <i class="fas fa-ruble-sign"></i>
                     </span>
                   </div>
-                  <p class="card-text">Если вы занимаетесь с парой <br> 3500 <i class="fas fa-ruble-sign fa-fw"></i> </p>
+                  <p class="card-text">Если вы занимаетесь парой <br> 3500 <i class="fas fa-ruble-sign fa-fw"></i> </p>
                   <p class="card-text">Длительность занятия</p>
                   <p>70 минут</p>
                   <p class="card-text little">* Стоимость посещения залов студии Ивара оплачивается отдельно - 350<i class="fas fa-ruble-sign fa-fw"></i></p>
@@ -789,7 +789,6 @@
                   <button type="button" class="btn" data-toggle="modal" data-target="#form_modal_pricing">Подробнее</button>
                 </div>
               </div>
-
             </div>
 
             <div class="wrapper  col-sm-6 col-9 col-lg-3">
@@ -816,6 +815,112 @@
             </div>
           </div>
         </div>
+        <div class="row">
+          <div class="col-12">
+            <h2 class="text-center mt-4">Для пар</h2>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="card-deck">
+            <div class="wrapper col-lg-3 col-sm-6 col-9">
+              <div class="card">
+                <h5 class="card-title">Первое занятие</h5>
+                <div class="card-body">
+                  <div class="price">
+                    <span class="cein">2000
+                      <i class="fas fa-ruble-sign"></i>
+                    </span>
+                  </div>
+                  <p class="card-text">Скидка на пробное занятие <br> 1500
+                    <i class="fas fa-ruble-sign"></i>
+                    <i class="far fa-smile-wink"></i>
+                  </p>
+                  <p class="card-text">Длительность занятия</p>
+                  <p>70 минут</p>
+                  <p class="card-text little">* Стоимость посещения залов студии Ивара оплачивается отдельно - 350<i class="fas fa-ruble-sign fa-fw"></i></p>
+                </div>
+                <div class="card-footer">
+                  <button type="button" class="btn" data-toggle="modal" data-target="#form_modal_pricing">Подробнее</button>
+                </div>
+              </div>
+
+            </div>
+
+            <div class="wrapper  col-sm-6 col-9 col-lg-3">
+              <div class="card">
+                <h5 class="card-title">Разовое занятие</h5>
+                <div class="card-body">
+                  <div class="price">
+                    <span class="cein">3500
+                      <i class="fas fa-ruble-sign"></i>
+                    </span>
+                  </div>
+                  <p class="card-text">Обычное занятие <br> без скидок </p>
+                  <p class="card-text">Длительность занятия</p>
+                  <p>70 минут</p>
+                  <p class="card-text little">* Стоимость посещения залов студии Ивара оплачивается отдельно - 350<i class="fas fa-ruble-sign fa-fw"></i></p>
+                </div>
+                <div class="card-footer">
+                  <button type="button" class="btn" data-toggle="modal" data-target="#form_modal_pricing">Подробнее</button>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="wrapper col-sm-6 col-9 col-lg-3">
+              <div class="card">
+                <h5 class="card-title">Абонемент на
+                  <span class="text-color">8</span> занятий</h5>
+                <div class="card-body">
+                  <div class="price">
+                    <span class="cein">24000
+                      <i class="fas fa-ruble-sign"></i>
+                    </span>
+                  </div>
+                  <p class="card-text">Экономия 4 000
+                    <i class="fas fa-ruble-sign"></i>
+                  </p>
+                  <p class="card-text">Длительность занятия</p>
+                  <p>70 минут</p>
+                  <p class="card-text little">* Стоимость посещения залов студии Ивара оплачивается отдельно - 350<i class="fas fa-ruble-sign fa-fw"></i></p>
+                </div>
+                <div class="card-footer">
+                  <button type="button" class="btn" data-toggle="modal" data-target="#form_modal_pricing">Подробнее</button>
+                </div>
+              </div>
+            </div>
+
+            <div class="wrapper  col-sm-6 col-9 col-lg-3">
+              <div class="card">
+                <h5 class="card-title">Абонемент на
+                  <span class="text-color">16</span> занятий</h5>
+                <div class="card-body">
+                  <div class="price">
+                    <span class="cein">46000
+                      <i class="fas fa-ruble-sign"></i>
+                    </span>
+                  </div>
+                  <p class="card-text">Экономия 10 000
+                    <i class="fas fa-ruble-sign"></i>
+                  </p>
+                  <p class="card-text">Длительность занятия</p>
+                  <p>70 минут</p>
+                  <p class="card-text little">* Стоимость посещения залов студии Ивара оплачивается отдельно - 350<i class="fas fa-ruble-sign fa-fw"></i></p>
+                </div>
+                <div class="card-footer">
+                  <button type="button" class="btn" data-toggle="modal" data-target="#form_modal_pricing">Подробнее</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <p class="text-center continue">
+          * -  срок действия абонементов:&nbsp;&nbsp;
+          <br class="d-xl-none">
+          на 8 занятий - 6 недель,&nbsp;&nbsp;
+          <br class="d-xl-none">
+          на 16 занятий - 10 недель
+        </p>
       </div>
     </section>
     <div class="modal fade bd-example-modal-sm" id="form_modal_pricing" tabindex="-1" role="dialog" aria-labelledby="form_modal_pricing"
