--- a/src/template.html
+++ b/src/template.html
@@ -915,7 +915,7 @@
           </div>
         </div>
         <p class="text-center continue">
-          * -  срок действия абонементов:&nbsp;&nbsp;
+          Cрок действия абонементов:&nbsp;&nbsp;
           <br class="d-xl-none">
           на 8 занятий - 6 недель,&nbsp;&nbsp;
           <br class="d-xl-none">
