--- a/src/template.html
+++ b/src/template.html
@@ -120,13 +120,19 @@
                   <div class="col-1 icon">
                     <i class="far fa-clock fa-fw"></i>
                   </div>
-                  <div class="col-10 context">увеличенная длительность занятий и индивидуальный темп развития </div>
+                  <div class="col-10 context">увеличенная длительность занятий ( 90 минут ) и индивидуальный темп развития </div>
                 </div>
                 <div class="row">
                   <div class="col-1 icon">
                     <i class="fas fa-ruble-sign fa-fw"></i>
                   </div>
                   <div class="col-10 context">абонементы по выгодной цене и скидки на первое занятие</div>
+                </div>
+                <div class="row">
+                  <div class="col-1 icon">
+                    <i class="fas fa-user-graduate fa-fw"></i>
+                  </div>
+                  <div class="col-10 context">на занятии ведут два преподавателя</div>
                 </div>
                 <div class="wrap_button">
                   <button type="button" class="btn btn-primary mt-2" data-toggle="modal" data-target="#form_modal">
@@ -737,7 +743,7 @@
                     <i class="far fa-smile-wink"></i>
                   </p>
                   <p class="card-text">Длительность занятия</p>
-                  <p>70 минут</p>
+                  <p>90 минут</p>
                   <p class="card-text little">* Стоимость посещения залов студии Ивара оплачивается отдельно - 350<i class="fas fa-ruble-sign fa-fw"></i></p>
                 </div>
                 <div class="card-footer">
@@ -758,7 +764,7 @@
                   </div>
                   <p class="card-text">Если вы занимаетесь парой <br> 3500 <i class="fas fa-ruble-sign fa-fw"></i> </p>
                   <p class="card-text">Длительность занятия</p>
-                  <p>70 минут</p>
+                  <p>90 минут</p>
                   <p class="card-text little">* Стоимость посещения залов студии Ивара оплачивается отдельно - 350<i class="fas fa-ruble-sign fa-fw"></i></p>
                 </div>
                 <div class="card-footer">
@@ -782,7 +788,7 @@
                     <i class="fas fa-ruble-sign"></i>
                   </p>
                   <p class="card-text">Длительность занятия</p>
-                  <p>70 минут</p>
+                  <p>90 минут</p>
                   <p class="card-text little">* Стоимость посещения залов студии Ивара оплачивается отдельно - 350<i class="fas fa-ruble-sign fa-fw"></i></p>
                 </div>
                 <div class="card-footer">
@@ -805,7 +811,7 @@
                     <i class="fas fa-ruble-sign"></i>
                   </p>
                   <p class="card-text">Длительность занятия</p>
-                  <p>70 минут</p>
+                  <p>90 минут</p>
                   <p class="card-text little">* Стоимость посещения залов студии Ивара оплачивается отдельно - 350<i class="fas fa-ruble-sign fa-fw"></i></p>
                 </div>
                 <div class="card-footer">
@@ -836,7 +842,7 @@
                     <i class="far fa-smile-wink"></i>
                   </p>
                   <p class="card-text">Длительность занятия</p>
-                  <p>70 минут</p>
+                  <p>90 минут</p>
                   <p class="card-text little">* Стоимость посещения залов студии Ивара оплачивается отдельно - 350<i class="fas fa-ruble-sign fa-fw"></i></p>
                 </div>
                 <div class="card-footer">
@@ -857,7 +863,7 @@
                   </div>
                   <p class="card-text">Обычное занятие <br> без скидок </p>
                   <p class="card-text">Длительность занятия</p>
-                  <p>70 минут</p>
+                  <p>90 минут</p>
                   <p class="card-text little">* Стоимость посещения залов студии Ивара оплачивается отдельно - 350<i class="fas fa-ruble-sign fa-fw"></i></p>
                 </div>
                 <div class="card-footer">
@@ -881,7 +887,7 @@
                     <i class="fas fa-ruble-sign"></i>
                   </p>
                   <p class="card-text">Длительность занятия</p>
-                  <p>70 минут</p>
+                  <p>90 минут</p>
                   <p class="card-text little">* Стоимость посещения залов студии Ивара оплачивается отдельно - 350<i class="fas fa-ruble-sign fa-fw"></i></p>
                 </div>
                 <div class="card-footer">
@@ -904,7 +910,7 @@
                     <i class="fas fa-ruble-sign"></i>
                   </p>
                   <p class="card-text">Длительность занятия</p>
-                  <p>70 минут</p>
+                  <p>90 минут</p>
                   <p class="card-text little">* Стоимость посещения залов студии Ивара оплачивается отдельно - 350<i class="fas fa-ruble-sign fa-fw"></i></p>
                 </div>
                 <div class="card-footer">
