--- a/src/template.html
+++ b/src/template.html
@@ -77,17 +77,17 @@
             </ul>
             <div class="contacts d-flex flex-row ml-auto align-items-center">
               <span class="btn">
-                <a href="https://vk.com/l0vec_snov" target="_blank">
+                <a href="https://vk.com/kantsiber" target="_blank">
                   <i class="fab fa-vk"></i>
                 </a>
               </span>
               <span class="btn">
-                <a href="tel:+79774638113">
+                <a href="tel:+79262146364">
                   <i class="fas fa-phone fa-sm"></i>
                 </a>
               </span>
               <div class="wtv-phone text-center d-flex flex-column ml-2">
-                <a href="tel:+79774638113" class="link-dark">8&emsp13;(977)&emsp13;463-81-13</a>
+                <a href="tel:+79262146364" class="link-dark">8&emsp13;(926)&emsp13;214-63-64</a>
                 <small>WhatsApp, Telegramm, Viber</small>
               </div>
             </div>
@@ -132,7 +132,7 @@
                   <div class="col-1 icon">
                     <i class="fas fa-user-graduate fa-fw"></i>
                   </div>
-                  <div class="col-10 context">на занятии ведут два преподавателя</div>
+                  <div class="col-10 context">занятие ведут два преподавателя</div>
                 </div>
                 <div class="wrap_button">
                   <button type="button" class="btn btn-primary mt-2" data-toggle="modal" data-target="#form_modal">
@@ -1143,7 +1143,7 @@
           <div class="wrap_contacts col-lg-3 offset-lg-3 col-md-4 offset-md-2">
             <div class="contacts d-inline-flex flex-row ml-auto align-items-center">
               <span class="btn">
-                <a href="https://vk.com/l0vec_snov" target="_blank">
+                <a href="https://vk.com/kantsiber" target="_blank">
                   <i class="fab fa-vk"></i>
                 </a>
               </span>
@@ -1153,7 +1153,7 @@
                 </a>
               </span>
               <div class="wtv-phone text-center d-flex flex-column ml-2">
-                <a href="tel:+79774638113" class="link-white">8&emsp13;(977)&emsp13;463-81-13</a>
+                <a href="tel:+79262146364" class="link-white">8&emsp13;(926)&emsp13;214-63-64</a>
                 <small>WhatsApp, Telegramm, Viber</small>
               </div>
             </div>
