--- a/src/template.html
+++ b/src/template.html
@@ -53,7 +53,7 @@
               <span class="line line-third"></span>
             </span>
           </button>
-
+          <h2 class="dance_name col-9 d-sm-none">студия танца</h2>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
               <li class="nav-item">
