--- a/src/template.html
+++ b/src/template.html
@@ -53,7 +53,7 @@
               <span class="line line-third"></span>
             </span>
           </button>
-          <h2 class="dance_name col-9 d-sm-none">студия танца</h2>
+          <h2 class="dance_name col-9 d-xs-none d-sm-block d-md-none">студия танца</h2>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
               <li class="nav-item">
@@ -187,8 +187,8 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h2>Преимущества индивидуального занятия
-              <br /> перед групповым</h2>
+            <h2>Преимущества индивидуального занятия 
+              <br />&nbsp;перед групповым</h2>
           </div>
         </div>
         <div class="row">
@@ -200,7 +200,7 @@
               <div class="header">
                 <h4>Удобное время занятий</h4>
               </div>
-              <p>Не нужно подстраиваться под расписание занятий в группе. <br />Вы занимаетесь тогда, <br /> когда вам это удобно</p>
+              <p>Не нужно подстраиваться под расписание занятий в группе.<br />&nbsp; Вы занимаетесь тогда, <br />&nbsp; когда вам это удобно</p>
             </div>
           </div>
           <div class="item col-lg-3 col-sm-6">
@@ -255,7 +255,7 @@
               <h3>Андрей Кадочников</h3>
               <ul class="fa-ul">
                 <li>
-                  <i class="fa-li fas fa-circle"></i>Танцую зук 6 лет, из них 4 года - преподавательский стаж. Помимо зука занимался такими танцами
+                  <i class="fa-li fas fa-circle"></i>Танцую зук 8 лет, из них 6 лет - преподавательский стаж. Помимо зука занимался такими танцами
                   как: хастл, сальса Нью-Йорк, сальса касино, бачата Sensual, форро, WCS! А это значит - при регулярных
                   занятиях вы будете знать фигуры нескольких танцев, свободно танцевать на дискотеках и Open-air.</li>
                 <li>
@@ -280,7 +280,7 @@
               <h3>Алиса Канцибер</h3>
               <ul class="fa-ul">
                 <li>
-                  <i class="fa-li fas fa-circle"></i> Занимаюсь танцами в общей сложности 2 года. Начала с бачаты и сальсы.
+                  <i class="fa-li fas fa-circle"></i> Занимаюсь танцами в общей сложности 3 года. Начала с бачаты и сальсы.
                   Впервые увидев зук, я моментально влюбилась в него и поняла "это точно моё". На данный момент активно развиваюсь
                    в двух танцевальных направлениях: зук и бачата sensual, постоянно улучшаю свою технику и открываю для себя что-то новое.
                   Я помогу вам учиться слышать и чувствовать танец, раскрывая все его грани. 
