--- a/src/template.html
+++ b/src/template.html
@@ -731,14 +731,14 @@
           <div class="card-deck">
             <div class="wrapper col-lg-3 col-sm-6 col-9">
               <div class="card">
-                <h5 class="card-title">Первое занятие</h5>
+                <h5 class="card-title">Пробное занятие</h5>
                 <div class="card-body">
                   <div class="price">
                     <span class="cein">1500
                       <i class="fas fa-ruble-sign"></i>
                     </span>
                   </div>
-                  <p class="card-text">Скидка на пробное занятие <br> 700
+                  <p class="card-text">Скидка на пробное занятие <br> 1200
                     <i class="fas fa-ruble-sign"></i>
                     <i class="far fa-smile-wink"></i>
                   </p>
@@ -750,7 +750,6 @@
                   <button type="button" class="btn" data-toggle="modal" data-target="#form_modal_pricing">Подробнее</button>
                 </div>
               </div>
-
             </div>
 
             <div class="wrapper  col-sm-6 col-9 col-lg-3">
